로컬파일로 레포트 파일 저장 로직 , 뷰어모드 추가

--- a/CS/ServerSide/Web.config
+++ b/CS/ServerSide/Web.config
@@ -5,7 +5,9 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="Northwind_Connection" connectionString="XpoProvider=MSAccess;Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\nwind.mdb;Persist Security Info=False;" />
+     <add name="Northwind_Connection" connectionString="XpoProvider=MSAccess;Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\nwind.mdb;Persist Security Info=False;" /> 
+    <add name="BS_PMS" 
+    connectionString="Data Source=192.168.61.240,1433;Initial Catalog=NSEPMS_DB;User ID=sa;Password=NSsvr123!@;"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
