--- a/JS/vue-report-designer/package.json
+++ b/JS/vue-report-designer/package.json
@@ -8,10 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@devexpress/analytics-core": "^19.2.6",
+    "@devexpress/analytics-core": "^19.2.7",
     "core-js": "^3.4.4",
-    "devexpress-reporting": "^19.2.6",
-    "devextreme": "^19.2.6",
+    "cors": "^2.8.5",
+    "devexpress-reporting": "^19.2.7",
+    "devextreme": "^19.2.7",
     "vue": "^2.6.10"
   },
   "devDependencies": {
@@ -22,5 +23,10 @@
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "vue-template-compiler": "^2.6.10"
-  }
+  },
+  "description": "```\r npm install\r ```",
+  "main": ".eslintrc.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
